# parking-lot

./: .env.example  .gitignore  package-lock.json  package.json
backend/: auth.py  config.py  database.py  detections.py  license.py  lots.py  main.py  models.py  plates.py  pyproject.toml  schemas.py  spaces.py  stats.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue  router.js  style.css
frontend/src/assets/: style.css
frontend/src/components/: AuthScreen.vue  CameraFeedWrapper.vue  DashboardSidebar.vue  LangSwitcher.vue  LegalPageShell.vue  LotForm.vue  LotsTab.vue  MapTab.vue  PlatesTab.vue  StatsTab.vue
frontend/src/components/charts/: BarChart.vue  DonutChart.vue  ForecastChart.vue  Sparkline.vue
frontend/src/composables/: i18n.js  parkingLots.js
frontend/src/data/: parkingData.js
frontend/src/locales/: index.js
frontend/src/locales/en/: index.js
frontend/src/locales/ro/: index.js
frontend/src/pages/: Home.vue  Login.vue  ParkingLots.vue  ParkingSpaces.vue  Privacy.vue  Register.vue  Support.vue  Terms.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: maps.js  parking.js
scripts/: backend-venv.mjs  configure.mjs
