[project]
name = "parking-lot-backend"
version = "0.1.0"
description = ""
authors = [{name = "Gabriel Bancos", email = "bancos.em.gabriel@student.utcluj.ro"}]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
]

[tool.setuptools]
py-modules = ["main", "config", "database", "models", "schemas", "auth"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
